@@ -1,5 +1,11 @@
 #summary Change log
 
+*2011-03-25*
+ * Registered numbers now say Dial out or Dial back. Easier to understand.
+ * If the dial out method is not enabled, not valid or otherwise unusable, don't show it.
+ * qgvdial has been submitted to the Ovi store for QA and in the calling all innovators contest!
+ * Upper bound check on the registered number array
+
 *2011-03-19*
  * Removed version to the pro file and added it only at build time.
  * Cancel msgbox did not disappear when Observer notices that call has occured.
